<resources>
    <string name="app_name">Collaborative Text Editor</string>

    <string name="txt_username">User Name</string>
    <string name="txt_password">Password</string>
    <string name="txt_Login">LOGIN</string>
    <string name="txt_signup">Signup</string>
    <string name="txt_new_account">Create Account? Signup</string>
    <string name="txt_old_account">Already have Account? Please Login</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="collab_texthint">Text here ....</string>
    <string name="txt_email">Enter Email Id</string>
    <string name="txt_confpassword">Confirm Password</string>
    <string name="txt_unknown">Unknown</string>
    <string name="txt_file_name">File Name :</string>
    <string name="txt_user_name">User Name :</string>
    <string name="txt_enter_title">Enter Title</string>
    <string name="txt_enter_text">Enter Text Here</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="txt_save">Save</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_file_list">File List</string>
    <string name="button_add">add</string>
    <string name="txt_time">Time</string>
    <string name="txt_setting">Setting</string>
    <string name="notification">Notification</string>
    <string name="export">Export</string>
</resources>
