<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/m_backgroundcolor"
    tools:context=".CollabAddText">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/editText_collabtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/txt_enter_title"
                android:textColorHint="@color/m_fontcolor"
                android:inputType="textPersonName"
                android:textColor="@color/m_fontcolor" />"
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="11">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/editText_collabtext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:ems="10"
                    android:gravity="left"
                    android:inputType="textMultiLine"
                    android:text=""
                    android:hint="@string/txt_enter_text"
                    android:textColorHint="@color/m_fontcolor"
                    android:textColor="@color/m_fontcolor" />
            </ScrollView>



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5">

            <Button
                android:id="@+id/button_save_collab_add_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="8dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="15dp"
                android:text="@string/txt_save"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

    </LinearLayout>



</RelativeLayout>